cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_295.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/sparse_array.c:185: error: DEAD_STORE
  The value written to &level (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/sparse_array.c:185:5: Write of unused value
183.   int OPENSSL_SA_set(OPENSSL_SA *sa, ossl_uintmax_t posn, void *val)
184.   {
185.       int i, level = 1;
           ^
186.       ossl_uintmax_t n = posn;
187.       void **p;
